<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="#fff3f3f3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/vipCustomerDetails_Name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top"
		    android:layout_marginBottom="10dp"
		    android:gravity="center"
		    android:text="@string/large_text"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/vipCustomerDetails_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/large_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/vipCustomerDetails_Birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/large_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip_customer_number"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/vipCustomerDetails_VIPCustomerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/large_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip_customer_points"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/vipCustomerDetails_Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/large_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/vipCustomerDetails_Orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:text="@string/order_history"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >
		
          <Button
            android:id="@+id/vipCustomerDetails_MonthlyReportButton"
            style="android:imageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="0dp"
            android:drawableTop="@drawable/ic_list_selector"
            android:text="@string/monthly_report"
            android:textSize="12sp" />
          
	      <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />
			
          <Button
            android:id="@+id/vipCustomerDetails_LifetimeReportButton"
            style="android:imageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="0dp"
            android:drawableTop="@drawable/ic_list_selector"
            android:text="@string/lifetime_report"
            android:textSize="12sp" />

          <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        </LinearLayout>

		<TextView
		    android:id="@+id/vipCustomerDetails_Modify"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="left"
		    android:layout_marginBottom="10dp"
		    android:text="@string/modify_customer"
		    android:textAppearance="?android:attr/textAppearanceSmall" />
		
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
		  
          <Button
            android:id="@+id/vipCustomerDetails_EditButton"
            style="android:imageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="0dp"
            android:drawableTop="@drawable/ic_edit_selector"
            android:text="@string/edit"
            android:textSize="12sp"/>
          
          <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

          <Button
            android:id="@+id/vipCustomerDetails_DeleteButton"
            style="android:imageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="0dp"
            android:drawableTop="@drawable/ic_delete_selector"
            android:text="@string/delete"
            android:textSize="12sp"/>
          
          <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />
          
        </LinearLayout>
    </LinearLayout>

</ScrollView>