<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="#fff3f3f3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/preorder_item"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/preorderItem_Location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/current_coffee_cart_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CalendarView
            android:id="@+id/preorderItem_Pickup"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:clickable="true"
            android:layout_marginBottom="40dp"
            android:layout_weight="0.13" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vip_customer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/preorderItem_VIPCustomerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/preorderItem_ProductSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/preorderItem_SaveButton"
            style="android:imageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:drawablePadding="0dp"
            android:drawableTop="@drawable/ic_submit_selector"
            android:text="@string/save_preorder"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>